lib/frostdart_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:frostdart/frostdart_bindings_generated.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  CResult_OwnedString Function(
    ffi.UnsignedInt,
    ffi.Pointer<ThresholdKeysWrapper>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Bool,
    ffi.Bool,
  )
>()
external CResult_OwnedString address_for_keys(
  int network,
  ffi.Pointer<ThresholdKeysWrapper> keys,
  int account,
  int address,
  bool change,
  bool secure,
);

@ffi.Native<
  CResult_AttemptSignRes Function(
    ffi.Pointer<ThresholdKeysWrapper>,
    ffi.Pointer<SignConfig>,
  )
>()
external CResult_AttemptSignRes attempt_sign(
  ffi.Pointer<ThresholdKeysWrapper> keys,
  ffi.Pointer<SignConfig> config,
);

@ffi.Native<
  CResult_KeyGenRes Function(
    ffi.Pointer<MultisigConfigWithName>,
    SecretSharesRes,
    ffi.Pointer<StringView>,
    ffi.UintPtr,
  )
>()
external CResult_KeyGenRes complete_key_gen(
  ffi.Pointer<MultisigConfigWithName> config,
  SecretSharesRes machine_and_commitments,
  ffi.Pointer<StringView> shares,
  int shares_len,
);

@ffi.Native<
  CResult_ResharedRes Function(StartResharedRes, ffi.Pointer<StringView>)
>()
external CResult_ResharedRes complete_reshared(
  StartResharedRes prior,
  ffi.Pointer<StringView> resharer_completes,
);

@ffi.Native<
  CResult_OwnedString Function(StartResharerRes, ffi.Pointer<StringView>)
>()
external CResult_OwnedString complete_resharer(
  StartResharerRes machine,
  ffi.Pointer<StringView> encryption_keys_of_reshared_to,
);

@ffi.Native<
  CResult_OwnedString Function(
    ffi.Pointer<TransactionSignatureMachineWrapper>,
    ffi.Pointer<StringView>,
    ffi.UintPtr,
  )
>()
external CResult_OwnedString complete_sign(
  ffi.Pointer<TransactionSignatureMachineWrapper> machine,
  ffi.Pointer<StringView> shares,
  int shares_len,
);

@ffi.Native<
  CResult_ContinueSignRes Function(
    ffi.Pointer<TransactionSignMachineWrapper>,
    ffi.Pointer<StringView>,
    ffi.UintPtr,
  )
>()
external CResult_ContinueSignRes continue_sign(
  ffi.Pointer<TransactionSignMachineWrapper> machine,
  ffi.Pointer<StringView> preprocesses,
  int preprocesses_len,
);

@ffi.Native<CResult_MultisigConfig Function(StringView)>()
external CResult_MultisigConfig decode_multisig_config(StringView config);

@ffi.Native<CResult_ResharerConfig Function(StringView)>()
external CResult_ResharerConfig decode_resharer_config(StringView config);

@ffi.Native<
  CResult_SignConfig Function(
    ffi.Pointer<ThresholdKeysWrapper>,
    ffi.UnsignedInt,
    StringView,
  )
>()
external CResult_SignConfig decode_sign_config(
  ffi.Pointer<ThresholdKeysWrapper> keys,
  int network,
  StringView encoded,
);

@ffi.Native<CResult_ThresholdKeysWrapper Function(StringView)>()
external CResult_ThresholdKeysWrapper deserialize_keys(StringView keys);

@ffi.Native<OwnedString Function(ffi.Pointer<MultisigConfig>)>()
external OwnedString encode_multisig_config(ffi.Pointer<MultisigConfig> self);

@ffi.Native<ffi.Void Function(OwnedString)>()
external void free_owned_string(OwnedString self);

@ffi.Native<
  CResult_SecretSharesRes Function(
    ffi.Pointer<MultisigConfigWithName>,
    ffi.Uint8,
    StringView,
    ffi.Pointer<SecretShareMachineWrapper>,
    ffi.Pointer<StringView>,
    ffi.UintPtr,
  )
>()
external CResult_SecretSharesRes get_secret_shares(
  ffi.Pointer<MultisigConfigWithName> config,
  int language,
  StringView seed,
  ffi.Pointer<SecretShareMachineWrapper> machine,
  ffi.Pointer<StringView> commitments,
  int commitments_len,
);

@ffi.Native<ffi.Uint16 Function(ffi.Pointer<ThresholdKeysWrapper>)>()
external int keys_index(ffi.Pointer<ThresholdKeysWrapper> keys);

@ffi.Native<ffi.Uint16 Function(ffi.Pointer<ThresholdKeysWrapper>)>()
external int keys_participants(ffi.Pointer<ThresholdKeysWrapper> keys);

@ffi.Native<ffi.Uint16 Function(ffi.Pointer<ThresholdKeysWrapper>)>()
external int keys_threshold(ffi.Pointer<ThresholdKeysWrapper> keys);

@ffi.Native<
  ffi.Pointer<MultisigConfig> Function(ffi.Pointer<MultisigConfigWithName>)
>()
external ffi.Pointer<MultisigConfig> multisig_config(
  ffi.Pointer<MultisigConfigWithName> self,
);

@ffi.Native<StringView Function(ffi.Pointer<MultisigConfigWithName>)>()
external StringView multisig_my_name(ffi.Pointer<MultisigConfigWithName> self);

@ffi.Native<StringView Function(ffi.Pointer<MultisigConfig>)>()
external StringView multisig_name(ffi.Pointer<MultisigConfig> self);

@ffi.Native<StringView Function(ffi.Pointer<MultisigConfig>, ffi.UintPtr)>()
external StringView multisig_participant(
  ffi.Pointer<MultisigConfig> self,
  int i,
);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<MultisigConfig>)>()
external int multisig_participants(ffi.Pointer<MultisigConfig> self);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<MultisigConfig>)>()
external ffi.Pointer<ffi.Uint8> multisig_salt(ffi.Pointer<MultisigConfig> self);

@ffi.Native<ffi.Uint16 Function(ffi.Pointer<MultisigConfig>)>()
external int multisig_threshold(ffi.Pointer<MultisigConfig> self);

@ffi.Native<
  CResult_MultisigConfigRes Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.Uint16,
    ffi.Pointer<StringView>,
    ffi.Uint16,
  )
>()
external CResult_MultisigConfigRes new_multisig_config(
  ffi.Pointer<ffi.Uint8> multisig_name$1,
  int multisig_name_len,
  int threshold,
  ffi.Pointer<StringView> participants,
  int participants_len,
);

@ffi.Native<
  CResult_ResharerConfigRes Function(
    ffi.Uint16,
    ffi.Pointer<ffi.Uint16>,
    ffi.Uint16,
    ffi.Pointer<StringView>,
    ffi.Uint16,
  )
>()
external CResult_ResharerConfigRes new_resharer_config(
  int new_threshold,
  ffi.Pointer<ffi.Uint16> resharers,
  int resharers_len,
  ffi.Pointer<StringView> new_participants,
  int new_participants_len,
);

@ffi.Native<
  CResult_SignConfigRes Function(
    ffi.Pointer<ThresholdKeysWrapper>,
    ffi.UnsignedInt,
    ffi.Pointer<PortableOutput>,
    ffi.UintPtr,
    ffi.UintPtr,
    ffi.Pointer<StringView>,
    ffi.Pointer<ffi.Uint64>,
    StringView,
    ffi.Uint64,
  )
>()
external CResult_SignConfigRes new_sign_config(
  ffi.Pointer<ThresholdKeysWrapper> keys,
  int network,
  ffi.Pointer<PortableOutput> outputs,
  int outputs_len,
  int payments,
  ffi.Pointer<StringView> payment_addresses,
  ffi.Pointer<ffi.Uint64> payment_amounts,
  StringView change,
  int fee_per_weight,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<OwnedPortableOutput>)>()
external ffi.Pointer<ffi.Uint8> output_hash(
  ffi.Pointer<OwnedPortableOutput> self,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<OwnedPortableOutput>)>()
external ffi.Pointer<ffi.Uint8> output_script_pubkey(
  ffi.Pointer<OwnedPortableOutput> self,
);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<OwnedPortableOutput>)>()
external int output_script_pubkey_len(ffi.Pointer<OwnedPortableOutput> self);

@ffi.Native<ffi.Uint64 Function(ffi.Pointer<OwnedPortableOutput>)>()
external int output_value(ffi.Pointer<OwnedPortableOutput> self);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<OwnedPortableOutput>)>()
external int output_vout(ffi.Pointer<OwnedPortableOutput> self);

@ffi.Native<StringView Function(ffi.Pointer<ResharerConfig>, ffi.UintPtr)>()
external StringView resharer_new_participant(
  ffi.Pointer<ResharerConfig> self,
  int i,
);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<ResharerConfig>)>()
external int resharer_new_participants(ffi.Pointer<ResharerConfig> self);

@ffi.Native<ffi.Uint16 Function(ffi.Pointer<ResharerConfig>)>()
external int resharer_new_threshold(ffi.Pointer<ResharerConfig> self);

@ffi.Native<ffi.Uint16 Function(ffi.Pointer<ResharerConfig>, ffi.UintPtr)>()
external int resharer_resharer(ffi.Pointer<ResharerConfig> self, int i);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<ResharerConfig>)>()
external int resharer_resharers(ffi.Pointer<ResharerConfig> self);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ResharerConfig>)>()
external ffi.Pointer<ffi.Uint8> resharer_salt(ffi.Pointer<ResharerConfig> self);

@ffi.Native<
  CResult_OwnedString Function(
    ffi.Pointer<ThresholdKeysWrapper>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Bool,
    ffi.Bool,
  )
>()
external CResult_OwnedString script_pubkey_for_keys(
  ffi.Pointer<ThresholdKeysWrapper> keys,
  int account,
  int address,
  bool change,
  bool secure,
);

@ffi.Native<OwnedString Function(ffi.Pointer<ThresholdKeysWrapper>)>()
external OwnedString serialize_keys(ffi.Pointer<ThresholdKeysWrapper> keys);

@ffi.Native<StringView Function(ffi.Pointer<SignConfig>)>()
external StringView sign_change(ffi.Pointer<SignConfig> self);

@ffi.Native<ffi.Uint64 Function(ffi.Pointer<SignConfig>)>()
external int sign_fee_per_weight(ffi.Pointer<SignConfig> self);

@ffi.Native<
  ffi.Pointer<OwnedPortableOutput> Function(
    ffi.Pointer<SignConfig>,
    ffi.UintPtr,
  )
>()
external ffi.Pointer<OwnedPortableOutput> sign_input(
  ffi.Pointer<SignConfig> self,
  int i,
);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<SignConfig>)>()
external int sign_inputs(ffi.Pointer<SignConfig> self);

@ffi.Native<StringView Function(ffi.Pointer<SignConfig>, ffi.UintPtr)>()
external StringView sign_payment_address(ffi.Pointer<SignConfig> self, int i);

@ffi.Native<ffi.Uint64 Function(ffi.Pointer<SignConfig>, ffi.UintPtr)>()
external int sign_payment_amount(ffi.Pointer<SignConfig> self, int i);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<SignConfig>)>()
external int sign_payments(ffi.Pointer<SignConfig> self);

@ffi.Native<
  CResult_StartKeyGenRes Function(
    ffi.Pointer<MultisigConfig>,
    StringView,
    ffi.Uint8,
  )
>()
external CResult_StartKeyGenRes start_key_gen(
  ffi.Pointer<MultisigConfig> config,
  StringView my_name,
  int language,
);

@ffi.Native<
  CResult_StartResharedRes Function(
    StringView,
    ffi.Pointer<ResharerConfig>,
    StringView,
    ffi.Pointer<StringView>,
  )
>()
external CResult_StartResharedRes start_reshared(
  StringView multisig_name$1,
  ffi.Pointer<ResharerConfig> resharer_config,
  StringView my_name,
  ffi.Pointer<StringView> resharer_starts,
);

@ffi.Native<
  CResult_StartResharerRes Function(
    ffi.Pointer<ThresholdKeysWrapper>,
    ffi.Pointer<ResharerConfig>,
  )
>()
external CResult_StartResharerRes start_resharer(
  ffi.Pointer<ThresholdKeysWrapper> keys,
  ffi.Pointer<ResharerConfig> config,
);

final class AttemptSignRes extends ffi.Struct {
  external ffi.Pointer<TransactionSignMachineWrapper> machine;

  external OwnedString preprocess;
}

final class CResult_AttemptSignRes extends ffi.Struct {
  external ffi.Pointer<AttemptSignRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_AttemptSignRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<AttemptSignRes> value,
    required int err,
  }) => $allocator<CResult_AttemptSignRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_ContinueSignRes extends ffi.Struct {
  external ffi.Pointer<ContinueSignRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_ContinueSignRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ContinueSignRes> value,
    required int err,
  }) => $allocator<CResult_ContinueSignRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_KeyGenRes extends ffi.Struct {
  external ffi.Pointer<KeyGenRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_KeyGenRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<KeyGenRes> value,
    required int err,
  }) => $allocator<CResult_KeyGenRes>()
    ..ref.value = value
    ..ref.err = err;
}
